# quadrotor_polynomial_planning

./: .gitignore  CMakeLists.txt  README.md  license.md  package.xml
launch/: gandalf.launch  linear.launch  master_hermite.launch  min_snap.launch  min_snap_test.launch  splines.launch
msg/: Coeff.msg  FlightCommand.msg
scripts/: array_utils.py  master_linear.py  master_minsnap.py  master_minsnap_fixedtakeoff.py  master_snap_test.py  tang_accel.py  traj.py  traj_linear.py  utils.py  vis_path.py
src/: OptimalPiecewisePolynomialGenerator.cpp  OptimalPiecewisePolynomialGenerator.h  PiecewisePolynomial.cpp  PiecewisePolynomial.h  Polynomial.cpp  Polynomial.hpp  QuadSpline.cpp  QuadSpline.h  QuadSplineSequencer.cpp  QuadSplineSequencer.h  QuadraticProgramEliminationSolve.h  TimeOptimizedQuadSplineGenerator.cpp  TimeOptimizedQuadSplineGenerator.h  WaypointInterpolator.cpp  WaypointInterpolator.h  eval_minimum_snap_node.cpp  minimum_snap_node.cpp  plan_minimum_snap_node.cpp  poly.cpp  poly.hpp  polyTraj.cpp  poly_traj_node.cpp
tests/: OptimalPiecewise_test.cpp  Splines_gtests.cpp  piecewise_poly_test.cpp  poly-test-documentation.cpp  poly-test.cpp  polyTest.m  time_optimized_test.cpp  waypoint_interpolator_test.cpp
